[gd_scene load_steps=3 format=3 uid="uid://cyyp6i5v2mqup"]

[ext_resource type="Script" path="res://src/interface/create_army.gd" id="1_7uoiu"]
[ext_resource type="Texture2D" uid="uid://4u2tsww01s0n" path="res://assets/tilemaps/MiniLumberjack_scaled_2x.png" id="2_50pq6"]

[node name="CreateArmy" type="Node2D"]
script = ExtResource("1_7uoiu")

[node name="Label" type="Label" parent="."]
offset_left = 25.0
offset_top = 17.0
offset_right = 198.0
offset_bottom = 47.0
text = "Select starting army"

[node name="ButtonStartGame" type="Button" parent="."]
offset_left = 680.0
offset_top = 367.0
offset_right = 726.0
offset_bottom = 398.0
text = "Start"

[node name="LabelArmy1" type="Label" parent="."]
offset_left = 29.0
offset_top = 98.0
offset_right = 69.0
offset_bottom = 121.0
text = "Thee Axemen"

[node name="ButtonSelectArmy1" type="Button" parent="."]
offset_left = 295.0
offset_top = 93.0
offset_right = 390.0
offset_bottom = 124.0
text = "Select"

[node name="Sprite2D3" type="Sprite2D" parent="."]
position = Vector2(243, 89)
texture = ExtResource("2_50pq6")
hframes = 7
vframes = 8

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(209, 91)
texture = ExtResource("2_50pq6")
hframes = 7
vframes = 8

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(175, 90)
texture = ExtResource("2_50pq6")
hframes = 7
vframes = 8
